--- a/EndToEndTestEntities/EndToEndTestEntities.csproj
+++ b/EndToEndTestEntities/EndToEndTestEntities.csproj
@@ -79,11 +79,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+	<Target Name="BeforeBuild">
+		<Exec Command="&quot;$(ProjectDir)..\Tools\NuGet&quot; install &quot;$(ProjectDir)packages.config&quot; -o &quot;$(ProjectDir)..\Packages&quot;" />
+	</Target>
 </Project>
