--- a/Smugli/Smugli.csproj
+++ b/Smugli/Smugli.csproj
@@ -149,11 +149,7 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+	<Target Name="BeforeBuild">
+		<Exec Command="&quot;$(ProjectDir)..\Tools\NuGet&quot; install &quot;$(ProjectDir)packages.config&quot; -o &quot;$(ProjectDir)..\Packages&quot;" />
+	</Target>
 </Project>
