--- a/EndToEndTestEntities/EndToEndTestEntities.csproj
+++ b/EndToEndTestEntities/EndToEndTestEntities.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Browser.cs" />
+    <Compile Include="PredictionPageDriver.cs" />
     <Compile Include="WebHostServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PageDrivers\HomePageDriver.cs" />
