--- a/EndToEndTests/EndToEndTests.csproj
+++ b/EndToEndTests/EndToEndTests.csproj
@@ -59,9 +59,11 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PredictionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SmugliServerTests.cs" />
     <Compile Include="AddPredictionTests.cs" />
+    <Compile Include="ViewPredictionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
